--- a/index.html
+++ b/index.html
@@ -3,13 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PaseCafe's</title>
+    <title>Lagi belajar nich's</title>
     <link rel="stylesheet" href="style.">
 </head>
 <body>
     <header>
-        <p>Sindu nie</p>
-        <p>Lagi nyobak commit wiee</p>
+        <h1>Sweet Child O Mine</h1>
+        <h4>Song of Guns N' Rose</h4>
+        <a href="https://www.youtube.com/watch?v=1w7OgIMMRc4">
+            <img src="Source/GunNRose.jpg" alt="Foto Gun N, Rose" width="300">
+        </a>  
+        <br><br>
+        <hr> 
     </header>
+    <main>
+        <h4>Lyrics:</h4>
+        <pre>
+            She's got a smile that it seems to me
+            Reminds me of childhood memories
+            Where everything was as fresh as the bright blue sky (Sky)
+            Now and then when I see her face
+            She takes me away to that special place
+            And if I stared too long, I'd probably break down and cry
+
+            Woah, oh, oh
+            Sweet child o' mine
+            oah, oh, oh, oh
+            Sweet love of mine
+
+            She's got eyes of the bluest skies
+            As if they thought of rain
+            I'd hate to look into those eyes and see an ounce of pain
+            Her hair reminds me of a warm, safe place
+            Where, as a child, I'd hide
+            And pray for the thunder and the rain to quietly pass me by
+            
+            Woah, oh, oh
+            Sweet child o' mine
+            Woah woah, oh, oh, oh
+            Sweet love of mine
+
+            Ohh!
+
+            Oh, oh-oh-yeah
+            Woah, yeah
+            Woah, oh, h-o
+            Sweet child of mine
+            Woah-oh, woah-oh
+            Sweet love of mine
+            Woah, oh-oh-oh
+            Sweet child of mine, ooh, yeah
+            Ooh-ooh-ooh-ooh
+            Sweet love of mine
+
+            Where do we go?
+            Where do we go now?
+            Where do we go?
+            Mm-mm, oh, where do we go?
+            Where do we go now?
+            Oh, where do we go now? (Where do we go?)
+            Where do we go? (Sweet child of mine)
+            Mm-huh, where do we go now?
+            Aye, aye, aye, aye, aye, aye, aye (Where do we go? Where do we go?)
+            Ooh, where do we go now? (Where do we go?)
+            Oh-oh-oh-oh-oh, oh-oh, woah
+            Where do we go?
+            Oh-oh, where do we go now?
+            (Oh) Where do we go, oh-oh-oh-oh? (Oh, wow)
+            Where do we go now?
+            Where do we go?
+            Woah-oh, where do we go now?
+            No, no, no, no, no, no, no
+            Sweet child
+            Sweet child of mine
+        </pre>
+    </main>
 </body>
 </html>
