Belajar hover active

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <a href="https://www.youtube.com/watch?v=1w7OgIMMRc4">
                 <img src="Source/GunNRose.jpg" alt="Foto Gun N, Rose" width="300">
             </a>  
+            <br>
+            <a href="https://en.wikipedia.org/wiki/Guns_N%27_Roses" target="_blank" title="Guns N' Rose details">Click here</a>
             <br><br>
             <hr> 
         </div>
@@ -86,7 +88,6 @@
                 Sweet child of mine
             </pre>
         </div>
-        
     </main>
 </body>
 </html>
