--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <div class="judul">
             <div>
-                <h1>Sweet Child O Mine</h1>
+                <h1>Sweet Child O Mata Mines</h1>
                 <h4 class="tulisan" id="penerbit">Song of Guns N' Roses</h4>
             </div>
             <a href="https://www.youtube.com/watch?v=1w7OgIMMRc4">
