--- a/index.html
+++ b/index.html
@@ -10,83 +10,70 @@
     <header>
         <div class="header" id="box1">
             <h3>Guns N' Roses</h3>
+            <img src="Source/" alt="" id="HomeLogo">
+            <img src="LogoGarisTiga.png" alt="" id="Titik3Logo">
         </div>
     </header>
     <main>
+        <div class="pages" id="stylePages">
+            <a href="" class="active">_________</a>
+            <a href="">_________</a>
+            <a href="">_________</a>
+        </div>
         <div class="judul">
             <div>
-                <h1>Sweet Child O Mine</h1>
+                <h1>Knockin' on Heaven's Door</h1>
                 <h4 class="tulisan" id="penerbit">Song of Guns N' Roses</h4>
             </div>
             <a href="https://www.youtube.com/watch?v=1w7OgIMMRc4">
                 <img src="Source/GunNRose.jpg" alt="Foto Gun N, Rose" width="300">
             </a>  
             <br>
-            <a href="https://en.wikipedia.org/wiki/Guns_N%27_Roses" target="_blank" title="Guns N' Rose details">Click here</a>
+            <a href="https://en.wikipedia.org/wiki/Guns_N%27_Roses" target="_blank" title="Guns N' Roses details">Click here</a>
             <br><br>
             <hr> 
         </div>
         <div class="isi">
             <h4 class="tulisan" id="lirik">Lyrics:</h4>
-            <pre>
-                She's got a smile that it seems to me
-                Reminds me of childhood memories
-                Where everything was as fresh as the bright blue sky (Sky)
-                Now and then when I see her face
-                She takes me away to that special place
-                And if I stared too long, I'd probably break down and cry
-
-                Woah, oh, oh
-                Sweet child o' mine
-                oah, oh, oh, oh
-                Sweet love of mine
-
-                She's got eyes of the bluest skies
-                As if they thought of rain
-                I'd hate to look into those eyes and see an ounce of pain
-                Her hair reminds me of a warm, safe place
-                Where, as a child, I'd hide
-                And pray for the thunder and the rain to quietly pass me by
-                
-                Woah, oh, oh
-                Sweet child o' mine
-                Woah woah, oh, oh, oh
-                Sweet love of mine
-
-                Ohh!
-
-                Oh, oh-oh-yeah
-                Woah, yeah
-                Woah, oh, h-o
-                Sweet child of mine
-                Woah-oh, woah-oh
-                Sweet love of mine
-                Woah, oh-oh-oh
-                Sweet child of mine, ooh, yeah
-                Ooh-ooh-ooh-ooh
-                Sweet love of mine
-
-                Where do we go?
-                Where do we go now?
-                Where do we go?
-                Mm-mm, oh, where do we go?
-                Where do we go now?
-                Oh, where do we go now? (Where do we go?)
-                Where do we go? (Sweet child of mine)
-                Mm-huh, where do we go now?
-                Aye, aye, aye, aye, aye, aye, aye (Where do we go? Where do we go?)
-                Ooh, where do we go now? (Where do we go?)
-                Oh-oh-oh-oh-oh, oh-oh, woah
-                Where do we go?
-                Oh-oh, where do we go now?
-                (Oh) Where do we go, oh-oh-oh-oh? (Oh, wow)
-                Where do we go now?
-                Where do we go?
-                Woah-oh, where do we go now?
-                No, no, no, no, no, no, no
-                Sweet child
-                Sweet child of mine
-            </pre>
+            <p id="mainLirik">
+                Mama take this badge from me <br>
+                I can't use it anymore <br>
+                It's getting dark too dark to see <br>
+                Feels like I'm knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                Mama put my guns in the ground <br>
+                I can't shoot them anymore <br>
+                That cold black cloud is comin' down <br>
+                Feels like I'm knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                "You just better start sniffin' your own rank subjugation jack <br>
+                'Cause it's just you against your tattered libido <br>
+                The bank and the mortician, forever man <br>
+                And it wouldn't be luck if you could get out of life alive" <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                (Knock-knock-knockin' on Heaven's door) <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                (Knock-knock-knockin' on Heaven's door) <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                (Knock-knock-knockin' on Heaven's door) <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                (Knock-knock-knockin' on Heaven's door) <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+                Knock-knock-knockin' on Heaven's door <br>
+            </p>
+        </div>
+        <div class="pages" id="mainPages">
+            <a href="" class="active">1</a>
+            <a href="">2</a>
+            <a href="">3</a>
         </div>
     </main>
 </body>
