Js Header dan ganti logo

--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="Media/LogoRasaKopi.png" width="160" height="50" alt="Rasa Kopi - Home">
+                <img src="Media/Me/LogoHeader1.png" width="300" height="200" alt="Rasa Kopi - Home">
             </a>
 
-            <nav class="navbar active" data-navbar>
+            <nav class="navbar" data-navbar>
 
                 <button class="close-btn" aria-label="close menu" data-nav-toggler>
                     <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
                 </button>
 
                 <a href="#" class="logo">
-                    <img src="Media/LogoRasaKopi.png" width="160" height="50" alt="Rasa Kopi - Home">
+                    <img src="Media/Me/LogoNavbar.png" width="160" height="50" alt="Rasa Kopi - Home">
                 </a>
 
                 <ul class="navbar-list">
