Kemaren nungkak css herone wii

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                             <img src="Media/hero-slider-3.jpg" width="1880" height="950" class="img-cover">
                         </div>
 
-                        <p class="label-2 section-subtile slider-reveal">Enak $ Lezat</p>
+                        <p class="label-2 section-subtile slider-reveal">Enak & Lezat</p>
 
                         <h1 class="display-1 hero-title slider-reveal">Setiap Biji Kopi punya <br> ceritanya tersendiri</h1>
 
@@ -248,7 +248,7 @@
 
                 </ul>
 
-                <button class="slider-btn prev" aria-label="slide to previus" data-next-btn>
+                <button class="slider-btn prev" aria-label="slide to previus" data-prev-btn>
                     <ion-icon name="chevron-back"></ion-icon>
                 </button>
 
