--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             <img src="Media/hero-slider-1.jpg" width="1880" height="950" class="img-cover">
                         </div>
 
-                        <p class="label-2 section-subtile slider-reveal">Bersih & Higienis</p>
+                        <p class="label-2 section-subtitle slider-reveal">Bersih & Higienis</p>
 
                         <h1 class="display-1 hero-title slider-reveal">Hanya cinta dan malam <br> yang bisa merasakan</h1>
 
@@ -211,7 +211,7 @@
                             <img src="Media/hero-slider-2.jpg" width="1880" height="950" class="img-cover">
                         </div>
 
-                        <p class="label-2 section-subtile slider-reveal">Penuh dengan Pengalaman</p>
+                        <p class="label-2 section-subtitle slider-reveal">Penuh dengan Pengalaman</p>
 
                         <h1 class="display-1 hero-title slider-reveal">Terbuat dari tepung <br> asli dan ada badaknya</h1>
 
@@ -231,7 +231,7 @@
                             <img src="Media/hero-slider-3.jpg" width="1880" height="950" class="img-cover">
                         </div>
 
-                        <p class="label-2 section-subtile slider-reveal">Enak & Lezat</p>
+                        <p class="label-2 section-subtitle slider-reveal">Enak & Lezat</p>
 
                         <h1 class="display-1 hero-title slider-reveal">Setiap Biji Kopi punya <br> ceritanya tersendiri</h1>
 
@@ -262,6 +262,145 @@
                     <span class="label-2 text-center span">Pesan Meja</span>
                 </a>
                 
+            </section>
+
+
+            <!-- SERVICE -->
+
+            <section class="section service bg-black-10 text-center" aria-label="service">
+                <div class="container">
+
+                    <p class="section-subtitle label-2">
+                        merasakan kemewahan
+                    </p>
+
+                    <h2 class="headline-1 section-title">
+                        Kami menawarkan pengalaman <br> yang menabjubkan
+                    </h2>
+
+                    <p class="section-text">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel numquam dignissimos animi maiores fugiat praesentium cum fuga doloribus nulla minima repellat sapiente eos esse, ab labore, pariatur quas optio totam?
+                    </p>
+
+                    <ul class="grid-list">
+
+                        <li>
+                            <div class="service-card">
+
+                                <a href="#" class="has-before hover:shine">
+                                    <figure class="card-banner img-holder" style="--width: 285 --height: 336;">
+                                        <img src="Media/service-1.jpg" width="285" height="336" loading="lazy" alt="Hidangan Utama" class="img-cover">
+                                    </figure>
+                                </a>
+
+                                <div class="card-content">
+
+                                    <h3 class="title-4 card-title">
+                                        <a href="#">Hidangan Utama</a>
+                                    </h3>
+
+                                    <a href="#" class="btn-text hover-underline label-2">Lihat Menu</a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="service-card">
+
+                                <a href="#" class="has-before hover:shine">
+                                    <figure class="card-banner img-holder" style="--width: 285 --height: 336;">
+                                        <img src="Media/service-1.jpg" width="285" height="336" loading="lazy" alt="Kopi" class="img-cover">
+                                    </figure>
+                                </a>
+
+                                <div class="card-content">
+
+                                    <h3 class="title-4 card-title">
+                                        <a href="#">Kopi</a>
+                                    </h3>
+
+                                    <a href="#" class="btn-text hover-underline label-2">Lihat Menu</a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="service-card">
+
+                                <a href="#" class="has-before hover:shine">
+                                    <figure class="card-banner img-holder" style="--width: 285 --height: 336;">
+                                        <img src="Media/service-2.jpg" width="285" height="336" loading="lazy" alt="Non Kopi" class="img-cover">
+                                    </figure>
+                                </a>
+
+                                <div class="card-content">
+
+                                    <h3 class="title-4 card-title">
+                                        <a href="#">Non Kopi</a>
+                                    </h3>
+
+                                    <a href="#" class="btn-text hover-underline label-2">Lihat Menu</a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="service-card">
+
+                                <a href="#" class="has-before hover:shine">
+                                    <figure class="card-banner img-holder" style="--width: 285 --height: 336;">
+                                        <img src="Media/service-1.jpg" width="285" height="336" loading="lazy" alt="Snack&Desert" class="img-cover">
+                                    </figure>
+                                </a>
+
+                                <div class="card-content">
+
+                                    <h3 class="title-4 card-title">
+                                        <a href="#">Snack & Desert</a>
+                                    </h3>
+
+                                    <a href="#" class="btn-text hover-underline label-2">Lihat Menu</a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="service-card">
+
+                                <a href="#" class="has-before hover:shine">
+                                    <figure class="card-banner img-holder" style="--width: 285 --height: 336;">
+                                        <img src="Media/service-1.jpg" width="285" height="336" loading="lazy" alt="Hidangan Tambahan" class="img-cover">
+                                    </figure>
+                                </a>
+
+                                <div class="card-content">
+
+                                    <h3 class="title-4 card-title">
+                                        <a href="#">Hidangan Tambahan</a>
+                                    </h3>
+
+                                    <a href="#" class="btn-text hover-underline label-2">Lihat Menu</a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
+                    </ul>
+
+                    <img src="Media/shape-1.png" width="246" height="412" loading="lazy" alt="shape" class="shape shape-1 move-anim">
+                    <img src="Media/shape-2.png" width="343" height="345" loading="lazy" alt="shape" class="shape shape-2 move-anim">
+
+                </div>
+
             </section>
 
         </article>
