--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
                     <div class="separator"></div>
 
-                    <p class="contact-label">Pesan Meja</p>
+                    <p class="contact-label">Hubungi</p>
 
                     <a href="tel:+628789012345" class="body-1 contact-number hover-underline">+62 878 901 2345</a>
                 </div>
@@ -401,6 +401,49 @@
 
                 </div>
 
+            </section>
+
+
+            <!-- ABOUT -->
+
+            <!-- kuang map, foto suasana -->
+
+            <section class="section about text-center">
+                <div class="container">
+
+                    <div class="about-content">
+
+                        <p class="label-2 section-subtitle" id="about-label">Tentang Kami</p>
+
+                        <h2 class="headline-1 section-title">Setiap biji Kopi <br> memiliki cerita tersendiri</h2>
+
+                        <p class="section-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem in tenetur voluptates, repellendus, totam rem harum, excepturi sit autem deserunt quis quaerat blanditiis hic. Recusandae pariatur laborum error saepe blanditiis.</p>
+
+                        <div class="contact-label">Hubungi Untuk Memesan</div>
+
+                        <a href="tel:+628789012345" class="body-1 contact-number hover-underline">+62 878 901 2345</a>
+
+                        <a href="#" class="btn btn-ptimary">
+                            <span class="text text-1">Selengkapnya</span>
+
+                            <span class="text text-2" aria-hidden="true">Selengkapnya</span>
+                        </a>
+
+                    </div>
+
+                    <figure class="about-banner">
+
+                        <img src="Media/about-banner.jpg" width="570" height="570" loading="lazy" alt="about banner" class="w-100" data-parallax-item data-parallax-speed="1">
+
+                        <div class="abs-img abs-img-1 has-before" data-parallax-item data-parallax-speed="1.75">
+                            <img src="Media/about-abs-image.jpg" width="284" height="285" loading="lazy" alt="" class="w-100">
+                        </div>
+
+                        <img src="Media/shape-3.png" width="197" height="194" loading="lazy" alt="" class="shape">
+
+                    </figure>
+
+                </div>
             </section>
 
         </article>
