--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div class="container">
 
                     <p class="section-subtitle label-2">
-                        merasakan kemewahan
+                        menu
                     </p>
 
                     <h2 class="headline-1 section-title">
@@ -444,6 +444,47 @@
                     </figure>
 
                 </div>
+            </section>
+
+
+            <!-- PROMO -->
+
+            <section class="special-dish text-center">
+
+                <div class="special-dish-banner">
+                    <img src="Media/special-dish-banner.jpg" width="940" height="900" loading="lazy" alt="special dish" class="img-cover">
+                </div>
+
+                <div class="special-dish-content bg-black-10">
+                    <div class="container">
+
+                        <img src="Media/badge-1.png" width="28" height="41" loading="lazy" alt="badge" class="abs-img">
+
+                        <p class="section-subtitle label-2">Promo</p>
+
+                        <h2 class="headline-1 section-title">Lobster Tertorent</h2>
+
+                        <p class="section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ad, soluta quasi numquam voluptatibus, voluptas omnis dignissimos commodi laudantium eaque et! Porro inventore id ipsum totam nulla vel facilis ipsa?</p>
+
+                        <div class="wrapper">
+                            <del class="del body-3">Rp.89.000,00</del>
+
+                            <span class="span body-1">Rp.69.000,00</span>
+                        </div>
+
+                        <a href="#" class="btn btn-primary">
+                            <span class="text text-1">Lihat Semua</span>
+
+                            <span class="text text-2" aria-hidden="true">Lihat Semua</span>
+                        </a>
+
+                    </div>
+                </div>
+
+                <img src="Media/shape-4.png" width="179" height="359" loading="lazy" alt="" class="shape shape-1">
+
+                <img src="Media/shape-9.png" width="351" height="462" loading="lazy" alt="" class="shape shape-1">
+
             </section>
 
         </article>
