--- a/index.html
+++ b/index.html
@@ -487,6 +487,147 @@
 
             </section>
 
+
+            <!-- RESERVASI -->
+
+            <section class="section testi text-center has-bg-image" style="background-image: url('./Media/testimonial-bg.jpg')" aria-label="testimonials">
+                <div class="container">
+
+                    <div class="quote">”</div>
+
+                    <p class="headline-2 testi-text">
+                        Teng teng gonteng teng gonteng teng gontenggggg, teng terereng teng tengg gontengg teng gontenggggg, gontengg teng gontenggg tengg gontenggggggg, trereng gontengg.....
+                    </p>
+
+                    <div class="wrapper">
+                        <div class="separator"></div>
+                        <div class="separator"></div>
+                        <div class="separator"></div>
+                    </div>
+
+                    <div class="profile">
+                        <img src="Media/testi-avatar.jpg" width="100" height="100" loading="lazy" alt="Gonteng" class="img">
+
+                        <p class="label-2 profile-name">Gonteng</p>
+                    </div>
+
+                </div>
+            </section>
+
+            <section class="reservation">
+                <div class="container">
+
+                    <div class="form reservation-form bg-black-10">
+
+                        <form action="" class="form-left">
+
+                            <h2 class="headline-1 text-center">Reservasi Online</h2>
+
+                            <p class="form-text text-center">
+                                Hubungi <a href="tel:+628789012345" class="link">+62 878 901 2345</a> atau isi form pesanan dibawah
+                            </p>
+
+                            <div class="input-wrapper">
+                                <input type="text" name="name" placeholder="Nama" autocomplete="off" class="input-field">
+
+                                <input type="tel" name="nomor" placeholder="Nomor Telepon" autocomplete="off" class="input-field">
+                            </div>
+
+                            <div class="input-wrapper">
+
+                                <div class="icon-wrapper">
+                                    <ion-icon name="person-outline" aria-hidden="ture"></ion-icon>
+
+                                    <select name="jumlah" class="input-field">
+                                        <option value="1-orang">1 Orang</option>
+                                        <option value="2-orang">2 Orang</option>
+                                        <option value="3-orang">3 Orang</option>
+                                        <option value="4-orang">4 Orang</option>
+                                        <option value="5-orang">5 Orang</option>
+                                        <option value="6-orang">6 Orang</option>
+                                        <option value="7-orang">7 Orang</option>
+                                        <option value="8-orang">8 Orang</option>
+                                    </select>
+
+                                    <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
+                                </div>
+
+                                <div class="icon-wrapper">
+                                    <ion-icon name="calendar-clear-outline" aria-hidden="ture"></ion-icon>
+
+                                    <input type="date" name="tanggal" class="input-field">
+
+                                    <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
+                                </div>
+
+                                <div class="icon-wrapper">
+                                    <ion-icon name="time-outline" aria-hidden="ture"></ion-icon>
+
+                                    <select name="waktu" class="input-field">
+                                        <option value="010:00am">10 : 00 am</option>
+                                        <option value="011:00am">11 : 00 am</option>
+                                        <option value="012:00pm">12 : 00 pm</option>
+                                        <option value="01:00pm">01 : 00 pm</option>
+                                        <option value="02:00pm">02 : 00 pm</option>
+                                        <option value="03:00pm">03 : 00 pm</option>
+                                        <option value="04:00pm">04 : 00 pm</option>
+                                        <option value="05:00pm">05 : 00 pm</option>
+                                        <option value="06:00pm">06 : 00 pm</option>
+                                        <option value="07:00pm">07 : 00 pm</option>
+                                        <option value="08:00pm">08 : 00 pm</option>
+                                        <option value="09:00pm">09 : 00 pm</option>
+                                        <option value="10:00pm">10 : 00 pm</option>
+                                        <option value="11:00pm">11 : 00 pm</option>
+                                    </select>
+
+                                    <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
+                                </div>
+
+                                <textarea name="message" placeholder="Detail Pesanan" autocomplete="off" class="input-field"></textarea>
+
+                                <button type="submit" class="btn btn-secondary">
+                                    <span class="text text-1">Pesan Meja</span>
+
+                                    <span class="text text-2" aria-hidden="true">Pesan Meja</span>
+                                </button>
+
+                            </div>
+
+                        </form>
+
+                        <div class="form-right text-center" style="background-image: url('./Media/form-pattern.png')">
+
+                            <h2 class="headline-1 text-center">Hubungi Kami</h2>
+
+                            <p class="contact-label">Pemesanan</p>
+
+                            <a href="tel:+628789012345" class="body-1 contact-number hover-underline">+62 878 901 2345</a>
+
+                            <div class="separator"></div>
+
+                            <p class="conatact-label">Lokasi</p>
+
+                            <address class="body-4">Rasa Kopi, Sukawati v Penestan, Gianyar, Bali</address>
+
+                            <p class="contact-label">Makan Siang</p>
+
+                            <p class="body-4">
+                                Setiap Hari <br> 11 : 00 am - 01:30 pm
+                            </p>
+
+                            <p class="contact-label">Makan Malam</p>
+
+                            <p class="body-4">
+                                Setiap Hari <br> 06 : 00 pm - 09:30 pm
+                            </p>
+
+                        </div>
+
+                    </div>
+
+                </div>
+            </section>
+
         </article>
     </main>
 
