saya nyobak masi

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                         <p class="label-2 section-subtitle slider-reveal">Penuh dengan Pengalaman</p>
 
-                        <h1 class="display-1 hero-title slider-reveal">Terbuat dari tepung <br> asli dan ada badaknya</h1>
+                        <h1 class="display-1 hero-title slider-reveal">Terbuat dari daki pikang <br> asli dan ada badaknya</h1>
 
                         <p class="body-2 hero-text slider-reveal">
                             Datang bersama keluarga dan nikmati hidangan yang spesial
@@ -415,7 +415,7 @@
 
                         <p class="label-2 section-subtitle" id="about-label">Tentang Kami</p>
 
-                        <h2 class="headline-1 section-title">Setiap biji Kopi <br> memiliki cerita tersendiri</h2>
+                        <h2 class="headline-1 section-title">Setiap biji Kopi Gonteng <br> memiliki cerita tersendiri</h2>
 
                         <p class="section-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem in tenetur voluptates, repellendus, totam rem harum, excepturi sit autem deserunt quis quaerat blanditiis hic. Recusandae pariatur laborum error saepe blanditiis.</p>
 
